--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend:
-    container_name: backend
+    container_name: backend_sample_nest
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -14,7 +14,7 @@ services:
       - db
 
   frontend:
-    container_name: frontend
+    container_name: frontend_sample_nest
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -24,15 +24,15 @@ services:
       - '4000:3000'
 
   db:
-    container_name: mysql-tuyotuyo
+    container_name: mysql_sample_nest
     image: mysql:8.0
     ports:
       - '3006:3306'
     environment:
-      - MYSQL_ROOT_PASSWORD=prj-calendar
-      - MYSQL_DATABASE=prj-calendar
-      - MYSQL_USER=tuyotuyo
-      - MYSQL_PASSWORD=tuyotuyo
+      - MYSQL_ROOT_PASSWORD=sample_nest
+      - MYSQL_DATABASE=sample_nest
+      - MYSQL_USER=sample_nest
+      - MYSQL_PASSWORD=sample_nest
       - TZ=Asia/Tokyo
     volumes:
       - data:/var/lib/mysql
